# depictr-py

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
app/: streamlit_app.py
docs/: _exec.py  about.md  api.rst  app.md  conf.py  getting-started.md  index.md  licence.md
docs/_static/: custom.css
docs/gallery/: accessibility.md  classification-and-survival.md  exploring-data.md  model-estimates.md  multivariate-and-time-series.md
docs/reference/: classification.md  composition-and-data.md  diagnostics.md  estimation-and-models.md  exploratory.md  multivariate-survival-timeseries.md  theme-and-accessibility.md
docs/stylesheets/: brand.css
examples/: README.txt  plot_accessibility.py  plot_classification_survival.py  plot_eda.py  plot_models.py  plot_multivariate_timeseries.py
overrides/partials/: header.html
sphinx-legacy/: api.rst
src/depictr/: __init__.py  bivariate.py  classification.py  compose.py  cvd.py  data.py  diagnostics.py  diagnostics_panels.py  distributions_extra.py  eda.py  eda_extra.py  estimation.py  mixed.py  models.py  multivariate.py  palette.py  posterior.py  power.py  predictions.py  survival.py  tables.py  theme.py  timeseries.py
tests/: conftest.py  test_bivariate.py  test_data_theme_models.py  test_diagnostics.py  test_diagnostics_panels.py  test_distributions_extra.py  test_eda_extra_power.py  test_estimation_tables.py  test_mixed.py  test_multivariate.py  test_palette_cvd.py  test_plots.py  test_posterior.py  test_predictions.py  test_timeseries.py
