[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depictr"
version = "0.1.0"
description = "A unified, colourblind-safe toolkit for publication-ready statistical visualisation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pablo Bernabeu", email = "pcbernabeu@gmail.com" }]
keywords = [
    "visualisation", "statistics", "ggplot", "plotnine", "colourblind",
    "accessibility", "publication", "EDA", "diagnostics", "survival",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "plotnine>=0.13",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Each plotting family delegates its computation to a specialist package and
# re-skins the result under the depictr theme. The specialists are optional, so
# the core installs light and each is needed only for its own functions.
models = ["statsmodels>=0.14"]
classification = ["scikit-learn>=1.3"]
survival = ["lifelines>=0.27"]
app = ["streamlit>=1.30"]
all = [
    "statsmodels>=0.14", "scikit-learn>=1.3", "lifelines>=0.27",
    "streamlit>=1.30",
]
test = ["pytest>=7.0"]
docs = [
    "sphinx>=7", "sphinx-gallery>=0.15", "pydata-sphinx-theme>=0.15",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://github.com/pablobernabeu/depictr-py"
Documentation = "https://pablobernabeu.github.io/depictr-py/"
Issues = "https://github.com/pablobernabeu/depictr-py/issues"
"R sibling" = "https://github.com/pablobernabeu/depictr"

[tool.hatch.build.targets.wheel]
packages = ["src/depictr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
