[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depictr"
dynamic = ["version"]
description = "A unified, colourblind-safe toolkit for publication-ready statistical visualisation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pablo Bernabeu", email = "pcbernabeu@gmail.com" }]
keywords = [
    "visualisation", "statistics", "ggplot", "plotnine", "colourblind",
    "accessibility", "publication", "EDA", "diagnostics", "survival",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    # 0.15 introduced the plot composition operators (| and /) that
    # arrange_plots and the multi-panel reports rely on.
    "plotnine>=0.15",
    "pandas>=2.0",
    "numpy>=1.24",
    # Imported directly by the core modules (palette/cvd colour handling, the
    # qq and estimation stats). plotnine pulls these in too, but a package
    # should declare what it imports rather than lean on a transitive pin.
    "matplotlib>=3.6",
    "scipy>=1.7",
]

[project.optional-dependencies]
# Each plotting family delegates its computation to a specialist package and
# re-skins the result under the depictr theme. The specialists are optional, so
# the core installs light and each is needed only for its own functions.
models = ["statsmodels>=0.14"]
classification = ["scikit-learn>=1.3"]
survival = ["lifelines>=0.27"]
app = ["streamlit>=1.30"]
all = [
    "statsmodels>=0.14", "scikit-learn>=1.3", "lifelines>=0.27",
    "streamlit>=1.30",
]
test = ["pytest>=7.0"]
docs = [
    "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24", "markdown-exec>=1.8",
]

[project.urls]
Homepage = "https://github.com/pablobernabeu/depictr-py"
Documentation = "https://pablobernabeu.github.io/depictr-py/"
Issues = "https://github.com/pablobernabeu/depictr-py/issues"
"R sibling" = "https://pablobernabeu.github.io/depictr/"

[tool.hatch.version]
# Single source of truth: __version__ in the package.
path = "src/depictr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/depictr"]

[tool.hatch.build.targets.sdist]
# Keep the generated docs site out of the source distribution; it is gitignored
# but can linger on disk from a local build.
exclude = [
    "site",
    "/images/**",  # README plots, served from GitHub raw, not needed in the package
]

[tool.pytest.ini_options]
# The Examples section of every public docstring is a real doctest and is
# collected with the suite, so a documented call cannot drift out of step with
# the API without a test going red.
addopts = "--doctest-modules"
testpaths = ["tests", "src/depictr"]
